--- a/exercícios/ex026/mq004/estilos/style.css
+++ b/exercícios/ex026/mq004/estilos/style.css
@@ -1,1 +1,46 @@
 @charset "UTF-8";
+
+/* Versão mobile first */
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    background-image: url(../imagens/back-phone.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+main {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 80vw;
+    margin: auto;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.384);
+}
+
+img {
+    display: none;
+    margin: auto;
+}
+
+img#phone {
+    display: block;
+}
