--- a/exercícios/ex026/mq004/estilos/media-query.css
+++ b/exercícios/ex026/mq004/estilos/media-query.css
@@ -1,1 +1,74 @@
 @charset "UTF-8";
+
+@media print {
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+    img#phone {
+        display: none;
+    }
+    img#print {
+        display: block;
+    }
+    main {
+        border: 2px solid black;
+        width: 90vw;
+    }
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+    body::after {
+        content: 'Essa impressão foi feita através do site cursoemvideo.com';
+        text-decoration: underline;
+    }
+}
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {
+
+} */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* @media only screen and (min-width: 600px) {
+
+} */
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone {
+        display: none;
+    }
+    img#tablet {
+        display: block;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#tablet {
+        display: none;
+    }
+    img#pc {
+        display: block;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#pc {
+        display: none;
+    }
+    img#tv {
+        display: block;
+    }
+}
