--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #D3D3D3;
 }
 
 #cabecalho {
@@ -18,28 +19,34 @@ h1 {
     padding: 10px;
 }
 
-ul {
-    display: flex;
-}
-
-li {
-    list-style-type: none;
-}
-
 a {
     text-decoration: none;
     color: white;
 }
 
-#menu {
+/* #menu {
     background-color: #303030;
+} */
+
+ul {
+    display: flex;
+    gap: 10px;
 }
 
-#lista {
-    visibility: hidden;
+li {
+    list-style-type: none;
+    padding: 10px;
+    background-color: #575757;
 }
 
-#icon-menu {
-    filter: ;
-    width: 32px;
+li:hover {
+    background-color: #808080;
+}
+
+main {
+    background-color: white;
+    width: 90vw;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
 }
