--- a/desafios/d015/estilos/media-query.css
+++ b/desafios/d015/estilos/media-query.css
@@ -1,1 +1,30 @@
 @charset "UTF-8";
+
+@media screen and (width > 768px) {
+    body {
+        background-image: linear-gradient(to bottom, #5f2c82, #499f9d);
+    }
+    #imagem {
+        height: 100%;
+        background-position: top left;
+        border-radius: 15px 0px 0px 15px;
+    }
+    #cartao {
+        width: 80vw;
+        grid-template-columns: 30% 1fr;
+        height: auto;
+    }
+    .entrada {
+        width: 100%;
+    }
+}
+
+@media screen and (width > 992px) {
+    #cartao {
+        grid-template-columns: 1fr 1fr;
+    }
+    #imagem {
+        grid-column: 2;
+        background-position: center left;
+    }
+}
