--- a/desafios/d015/estilos/style.css
+++ b/desafios/d015/estilos/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -7,11 +15,107 @@
 
 body {
     background-color: #5f2c82;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: grid;
+    height: 100vh;
 }
 
-main {
+#cartao {
+    display: grid;
     background-color: white;
-    display: block;
     margin: auto;
     width: 250px;
+    height: auto;
+    border-radius: 15px;
+}
+
+#imagem {
+    background-image: url(../imagens/metal.jpg);
+    background-position: bottom left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 100%;
+    border-radius: 15px 15px 0px 0px;
+}
+
+#login {
+    padding: 10px;
+}
+
+main > div > h1 {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+main > div > p {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+#formulario {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.campo {
+    display: flex;
+    align-items: center;
+    background-color: #5f2c82;
+    color: white;
+    padding: 5px;
+    gap: 5px;
+    border-radius: 5px;
+}
+
+.entrada {
+    background-color: #94cfcd;
+    border-style: none;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.entrada:focus {
+    background-color: white;
+}
+
+.botoes {
+    text-align: center;
+    padding: 15px;
+    border-radius: 5px;
+    border-style: none;
+}
+
+input[type="submit"] {
+    background-color: #53aaa7;
+    color: white;
+}
+
+input[type="submit"]:hover {
+    background-color: #2d6462;
+}
+
+#esqueci-senha {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 5px;
+    border: 1px solid #49a09d;
+    background-color: white;
+    color: #2d759a;
+    text-decoration: none;
+}
+
+#esqueci-senha:hover {
+    background-color: #6cd3cf;
+}
+
+#esqueci-senha:visited {
+    color: #2d759a;
+}
+
+#icone-mensagem {
+    font-size: 0.8em;
 }
