--- a/desafios/d015/estilos/style.css
+++ b/desafios/d015/estilos/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap');
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 1,
@@ -13,9 +15,10 @@
     padding: 0px;
 }
 
+
 body {
     background-color: #5f2c82;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Cantarell', sans-serif;
     display: grid;
     height: 100vh;
 }
@@ -27,6 +30,8 @@ body {
     width: 250px;
     height: auto;
     border-radius: 15px;
+    transition: width .2s, height .2s;
+    transition-timing-function: ease;
 }
 
 #imagem {
@@ -79,6 +84,7 @@ main > div > p {
 
 .entrada:focus {
     background-color: white;
+    outline: none;
 }
 
 .botoes {
@@ -91,6 +97,7 @@ main > div > p {
 input[type="submit"] {
     background-color: #53aaa7;
     color: white;
+    font-family: 'Cantarell', sans-serif;;
 }
 
 input[type="submit"]:hover {
