propriedades font-size alteradas de px para em

--- a/desafios/d015/estilos/media-query.css
+++ b/desafios/d015/estilos/media-query.css
@@ -32,9 +32,9 @@
         border-radius: 0px 15px 15px 0px;
     }
     main > div > h1 {
-        font-size: 32px;
+        font-size: 2em;
     }
     main > div > p {
-        font-size: 18px;
+        font-size: 1.1em;
     }
 }
