--- a/desafios/d015/estilos/style.css
+++ b/desafios/d015/estilos/style.css
@@ -22,6 +22,7 @@ body {
     font-family: 'Cantarell', sans-serif;
     display: grid;
     height: 100vh;
+    width: 100vw;
 }
 
 #cartao {
@@ -33,6 +34,7 @@ body {
     border-radius: 15px;
     transition: width .2s, height .2s;
     transition-timing-function: ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
 }
 
 #imagem {
@@ -51,12 +53,12 @@ body {
 
 main > div > h1 {
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5em;
     margin-bottom: 10px;
 }
 
 main > div > p {
-    font-size: 14px;
+    font-size: 0.8em;
     margin-bottom: 10px;
 }
 
@@ -93,12 +95,13 @@ main > div > p {
     padding: 15px;
     border-radius: 5px;
     border-style: none;
+    font-size: 1em;
 }
 
 input[type="submit"] {
     background-color: #53aaa7;
     color: white;
-    font-family: 'Cantarell', sans-serif;;
+    font-family: 'Cantarell', sans-serif;
 }
 
 input[type="submit"]:hover {
